--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
+    },
+    "dependencies": {
+        "animate.css": "^4.1.1",
+        "vue-material-design-icons": "^5.1.2",
+        "vue3-carousel": "^0.2.9"
     }
 }
